--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "storybook": "start-storybook -p 6006 -s ./public/locales",
-    "build-storybook": "build-storyboock -s public/locales"
+    "build-storybook": "build-storyboock -s ./locales"
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
