--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.1.4",
     "antd": "^5.6.4",
     "axios": "^1.4.0",
+    "classnames": "^2.3.2",
     "dayjs": "^1.11.9",
     "i18next": "^23.2.8",
     "i18next-browser-languagedetector": "^7.1.0",
@@ -22,9 +23,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.1",
     "react-router-dom": "^6.14.2",
-    "recharts": "^2.7.2",
     "sass": "^1.63.6",
-    "uuid": "^9.0.0",
     "zustand": "^4.3.9",
     "zustand-persist": "^0.4.0"
   },
@@ -38,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
+    "prettier": "3.0.0",
     "vite": "^4.3.9"
   }
 }
