--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
+openweather
 VITE_BASE_URL = 'https://api.openweathermap.org/data/2.5/'
 VITE_API_KEY = '5fedcbd7c2c4e234f857f50c88de30ae'
+
+ninjas
+VITE_BASE_URL_AUTOCOMPLETE = 'https://api.api-ninjas.com/v1/city?'
+VITE_API_KEY_AUTOCOMPLETE = '49l1hoU5qWpNBF+GahICKg==8kcYVF5gRNsB2H57'
